--- a/Firebase/functions/package.json
+++ b/Firebase/functions/package.json
@@ -8,17 +8,13 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "engines": {
-    "node": "8"
-  },
   "dependencies": {
-    "express": "^4.17.1",
-    "firebase": "^6.3.0",
-    "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0"
-  },
-  "devDependencies": {
-    "firebase-functions-test": "^0.1.6"
+    "busboy": "^0.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "firebase": "^5.9.0",
+    "firebase-admin": "~7.0.0",
+    "firebase-functions": "^2.2.0"
   },
   "private": true
 }
